# OOP-lab-4

./: CMakeLists.txt  main.cpp
TriangleRepository/: TriangleRepository.cpp  TriangleRepository.h
UI/: menu.cpp  menu.h
UIModules/: IOModules.cpp  IOModules.h
classes/: Point.cpp  Point.h  Triangle.cpp  Triangle.h
operations/: point_operations.cpp  point_operations.h
tests/: tests.cpp  tests.h
